--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "express": "^4.21.2",
     "mongoose": "^8.12.2",
     "tsx": "^4.19.3",
+    "validator": "^13.15.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/validator": "^13.15.0",
     "dotenv": "^16.4.7"
   }
 }
