--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
+    "slugify": "^1.6.6",
     "tsx": "^4.19.3",
     "validator": "^13.15.0",
     "zod": "^3.24.2"
