--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
+    "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
     "tsx": "^4.19.3",
     "validator": "^13.15.0",
@@ -25,6 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.15.0",
     "dotenv": "^16.4.7"
   }
