--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
+    "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
     "tsx": "^4.19.3",
