--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
     "morgan": "^1.10.0",
@@ -24,6 +27,7 @@
     "slugify": "^1.6.6",
     "tsx": "^4.19.3",
     "validator": "^13.15.0",
+    "xss-clean": "^0.1.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
