--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.13",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
     "tsx": "^4.19.3",
