--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
+    "sharp": "^0.34.2",
     "slugify": "^1.6.6",
     "tsx": "^4.19.3",
     "validator": "^13.15.0",
