--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.1",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
@@ -29,18 +31,18 @@
     "tsx": "^4.19.3",
     "validator": "^13.15.0",
     "xss-clean": "^0.1.4",
-    "zod": "^3.24.2",
-    "dotenv": "^16.4.7"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
+    "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.15.0",
     "typescript": "^5.8.3",
-    "@types/hpp": "^0.2.6",
-    "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.13"
+    "@types/ejs": "^3.1.5"
   }
 }
