--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.3",
     "sharp": "^0.34.2",
     "slugify": "^1.6.6",
+    "stripe": "^18.2.1",
     "tsx": "^4.19.3",
     "validator": "^13.15.0",
     "xss-clean": "^0.1.4",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.9",
@@ -42,7 +44,6 @@
     "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.15.0",
-    "typescript": "^5.8.3",
-    "@types/ejs": "^3.1.5"
+    "typescript": "^5.8.3"
   }
 }
