--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "sharp": "^0.34.2",
     "slugify": "^1.6.6",
     "stripe": "^18.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "tsoa": "^6.6.0",
     "tsx": "^4.19.3",
     "validator": "^13.15.0",
     "xss-clean": "^0.1.4",
@@ -43,6 +46,8 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.0",
     "typescript": "^5.8.3"
   }
